crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@type_casts___casting_a_u32_that_doesn_t_fit_in_a_felt_2.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Type Casts - Casting a u32 that doesn't fit in a felt 2"
input_file: mdtest/01-basics/08-type-casts.md
---
Source:
fn test_u32_to_felt_limit() -> felt {
    let x: u32 = 2147483646;
    let y: felt = x as felt;
    return y;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_u32_to_felt_limit {
    entry: 0

    0:
      %0 = 2147483646 (u32)
      %1 = cast %0 from u32 to felt
      return %1

  }

}
