crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@type_casts___casting_from_u32_to_felt.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Type Casts - Casting from u32 to felt"
input_file: mdtest/01-basics/08-type-casts.md
---
Source:
fn test_u32_to_felt(input: u32) -> felt {
    let y: felt = input as felt;
    return y;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_u32_to_felt {
    parameters: [0]
    entry: 0

    0:
      %1 = cast %0 from u32 to felt
      return %1

  }

}
